@@ -7,35 +7,35 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	5.79 (gritter) 1/26/06";
+	"@(#)/usr/ucb/otfdump.sl	5.80 (gritter) 2/1/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  5.79 (gritter) 1/26/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 5.79 (gritter) 1/26/06";
+static const char sccsid[] USED = "@(#)dpost.sl  5.80 (gritter) 2/1/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 5.80 (gritter) 2/1/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.79 (gritter) 1/26/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.80 (gritter) 2/1/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.79 (gritter) 1/26/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.80 (gritter) 2/1/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "5.79";
+const char revision[] = "5.80";
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
-ext.h: * Sccsid @(#)ext.h	1.33 (gritter) 12/19/05
+ext.h: * Sccsid @(#)ext.h	1.34 (gritter) 1/31/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 mallint.h: * Sccsid @(#)mallint.h	1.4 (gritter) 8/27/05
 malloc.c: * Sccsid @(#)malloc.c	1.3 (gritter) 8/26/05
-n1.c: * Sccsid @(#)n1.c	1.57 (gritter) 1/6/06
+n1.c: * Sccsid @(#)n1.c	1.58 (gritter) 1/31/06
 n2.c: * Sccsid @(#)n2.c	1.14 (gritter) 12/19/05
-n3.c: * Sccsid @(#)n3.c	1.71 (gritter) 1/6/06
+n3.c: * Sccsid @(#)n3.c	1.72 (gritter) 1/31/06
 n4.c: * Sccsid @(#)n4.c	1.21 (gritter) 12/19/05
-n5.c: * Sccsid @(#)n5.c	1.34 (gritter) 1/1/06
-n7.c: * Sccsid @(#)n7.c	1.40 (gritter) 12/6/05
+n5.c: * Sccsid @(#)n5.c	1.35 (gritter) 1/31/06
+n7.c: * Sccsid @(#)n7.c	1.41 (gritter) 1/31/06
 n8.c: * Sccsid @(#)n8.c	1.18 (gritter) 12/19/05
 n9.c: * Sccsid @(#)n9.c	1.35 (gritter) 1/6/06
-ni.c: * Sccsid @(#)ni.c	1.18 (gritter) 12/6/05
+ni.c: * Sccsid @(#)ni.c	1.19 (gritter) 1/31/06
 nii.c: * Sccsid @(#)nii.c	1.21 (gritter) 12/19/05
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
-tdef.h: * Sccsid @(#)tdef.h	1.66 (gritter) 12/19/05
+tdef.h: * Sccsid @(#)tdef.h	1.67 (gritter) 1/31/06
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.21 (gritter) 12/5/05
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.27 (gritter) 12/23/05
 nroff.d/proto.h: * Sccsid @(#)proto.h	1.28 (gritter) 12/20/05
@@ -61,7 +61,7 @@ troff.d/dpost.d/asciitype.c:	Sccsid @(#)asciitype.c	1.4 (gritter) 4/17/03
 troff.d/dpost.d/asciitype.h:	Sccsid @(#)asciitype.h	1.6 (gritter) 9/9/05	
 troff.d/dpost.d/color.c: * Sccsid @(#)color.c	1.5 (gritter) 11/29/05
 troff.d/dpost.d/comments.h: * Sccsid @(#)comments.h	1.5 (gritter) 8/23/05
-troff.d/dpost.d/dpost.c: * Sccsid @(#)dpost.c	1.132 (gritter) 1/26/06
+troff.d/dpost.d/dpost.c: * Sccsid @(#)dpost.c	1.133 (gritter) 2/1/06
 troff.d/dpost.d/dpost.h: * Sccsid @(#)dpost.h	1.6 (gritter) 10/1/05
 troff.d/dpost.d/dpost_afm.c: * Sccsid @(#)dpost_afm.c	1.2 (gritter) 9/29/05
 troff.d/dpost.d/dpost_draw.c: * Sccsid @(#)dpost_draw.c	1.5 (gritter) 11/28/05
